--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <p> <a href="page2.html"> Web Assignment</a></p>
 <br>
-<p> <a href="LetsbePresident.html">Let's Be President</a></p>
+<p> <a href="LetsbePresident2.html">Let's Be President</a></p>
 
 </div>
 
